[package]
name = "refinish"
version = "0.1.0"
description = "Lightweight image compression and conversion"
authors = ["Arnav Lande"]
edition = "2021"

[lib]
name = "refinish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "rayon"] }
mozjpeg = "0.9"
oxipng = "10"
trash = "5"
tokio = { version = "1.50.0", features = ["rt"] }
webp = "0.3"
rayon = "1.10"
tauri-plugin-dialog = "2.6.0"
kamadak-exif = "0.6"

# Optimize all dependencies in dev mode — critical for image codec performance
[profile.dev.package."*"]
opt-level = 3
